# looper

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
assets/: demo.tape
commands/: start-loops.md
src/looper/: __init__.py  cli.py  harvest.py  installer.py  lease.py  models.py  registry.py  tui.py
tests/: test_cli.py  test_harvest.py  test_installer.py  test_lease.py  test_models.py  test_registry.py  test_tui.py
