[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "looper"
version = "0.1.0"
description = "Durable loop registry for Claude Code scheduled loops"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Amit Prasad" }]
keywords = ["claude-code", "cron", "loops", "cli", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "textual>=0.40",
]

[project.urls]
Repository = "https://github.com/amitection/looper"

[project.scripts]
looper = "looper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/looper"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
]
